# VeronIA

./: .gitignore  LICENSE  README.md  app.py  main_chat_page.py  pyproject.toml  test.py
agents/: rag_agent.py  rag_agent_temp.py
components/: chat_display.py  chat_interface.py  header.py  mode_selector.py  response_format.py  sidebar.py
data/vector_store/: chroma.sqlite3
db/: __init__.py  db.py  db_sqlite.py  init_db.py  smartwiki_links.json  veronia.db
db/pages/: adding_a_button_that_runs_a_javascript.json  adding_custom_fields_to_an_applicant_profile.json  advanced_custom_fields.json  allowing_only_one_check_box_to_be_selected.json  attach_a_pdf_to_a_web_page_view.json  custom_field_type_text_box_-_text_multiple_lines.json  custom_field_type_text_box_text_single_line.json
db/pages/Communications/: adding_an_applicant_resume.json  administrator_interface.json  arcadia_permissions.json  branding.json  browser.json  category_formula.json  category_type_-_field_availability.json  categoryapplications.json  categorycommunications.json  categorycustom_fields.json  categoryroles.json  categorysmartfolders.json  categorytransactions.json  categoryuniversal_tracking_application.json  categoryworkflows.json  company_role.json  content_management.json  creating_a_role_based_interface.json  custom_field_language_settings.json  discussion_board.json  email__email_broadcast_security.json  email_anything.json  emulation_mode.json  everyone.json  external_user.json  field_permissions.json  global_user_administrator.json  group_email.json  instance.json  integrating_email_with_the_uta.json  internal.json  list_view_overview.json  menus_and_roles.json  message_queue.json  organization_hierarchy.json  overview_of_the_email_broadcast_application.json  overview_of_the_security_models.json  owner.json  password.json  people.json  (+37 more)
db/pages/Tools/: adding_statuses_for_organizations_and_contacts_-_why.json  address_book_template.json  address_types.json  advanced_logic.json  alias.json  application_connectivity_summary_diagram.json  arcadia_settings.json  association_settings.json  associations.json  authentication_member.json  auto_loader.json  autoloader_for_associations.json  branding.json  bypassing_the_login_page.json  categoryapplicant_tracking.json  categoryglobal_settings.json  categorytools.json  categoryxml.json  classic_options.json  company__account_settings.json  company_relationship.json  configuration_error_log.json  configuration_menu.json  (+42 more)
db/vector_store/: chroma.sqlite3
docs/: CHANGELOG.md  implementacao_smartwiki.md  inspecao_codex.md  overview.md  prd.md  relatorio_de_inspe\303\247\303\243o.md  relatorio_de_inspeção.md  todo.md
legado/: init_db.py
pages/: 2_Especialista_SmartSimple.py  _Chat_Geral.py  redator.py  🔍_SmartSimple_RAG.py
prompts/: postit_prompt.txt  rag_agent_prompt.txt  redator_prompt.txt  system_prompt.txt  tradutor_prompt.txt  websearch_prompt.txt
scripts/: run_crawler.py  run_ingest.py
services/: conversation_service.py  file_processor.py  ingest_service.py  memory_service.py  model_service.py  rag_service.py  scraping_service.py  scraping_service_temp.py  upload_service.py
services/crawler/: category_fetcher.py  config.py  fetcher.py  models.py  parser.py  storage.py
utils/: configs.py  constants.py  session_utils.py  style.css  style.py
(+21 files in other folders)
