[project]
name = "minimo"
version = "0.1.0"
description = "Interface simples para interações com mmodelos de LLM."
authors = [
    {name = "Cláudio dos Santos",email = "cadossantos@proton.me"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
packages = [
    { include = "agents" },
    { include = "components" },
    { include = "db" },
    { include = "docs" },
    { include = "prompts" },
    { include = "services" },
    { include = "smartwiki" },
    { include = "utils" },
]
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.93.0,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-groq (>=0.3.5,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "flashrank (>=0.2.10,<0.3.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.1"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"